--- a/jwt/frontend/package.json
+++ b/jwt/frontend/package.json
@@ -11,6 +11,10 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
+    "cors": "^2.8.5",
+    "dayjs": "^1.10.7",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^4.14.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -41,5 +45,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://localhost:8000"
 }
